--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Wardrobe_Share"
         tools:targetApi="31">
         <activity
-            android:name=".WelcomeScreen"
+            android:name=".LoginScreenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterScreenActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
